# mheat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mheat.bat  mheat.sh  prepare.bat  prepare.sh  run.bat  run.sh  start.bat  start.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  live-validation.yml  release.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  __main__.py  auth.py  cache.py  climatology.py  config.py  deps.py  errors.py  impact.py  logging_config.py  main.py  metrics.py  mhw.py  middleware.py  overlays.py  processes.py  sst.py  stac.py  telemetry.py
backend/app/fixtures/: .gitkeep
backend/app/fixtures/overlays/: aquaculture.json
backend/app/routers/: __init__.py  _caching.py  aggregate.py  anomaly.py  data.py  detect.py  events.py  freshness.py  health.py  metrics.py  ogcapi.py  overlays.py  sectoral.py  stac.py
backend/tests/: conftest.py  test_aggregate_router.py  test_anomaly_render.py  test_anomaly_router.py  test_body_size_limit.py  test_bootstrap_climatology.py  test_cli.py  test_climatology.py  test_climatology_fingerprint.py  test_config_validators.py  test_detect_router.py  test_edito_requirements.py  test_envelope_503_codes.py  test_error_envelope.py  test_event_geometry.py  test_events_cache.py  test_events_edges.py  test_events_parquet.py  test_events_router.py  test_health.py  test_impact.py  test_impact_edges.py  test_logging_config.py  test_main_spa.py  test_metrics.py  test_mhw.py  test_mhw_baseline.py  test_ogcapi.py  test_ogcapi_coverage.py  test_oidc.py  test_openapi_contract.py  test_openapi_contract_freeze.py  test_openapi_examples.py  test_overlay_memo.py  test_overlays_provider.py  test_processes_async.py  test_rate_limit.py  test_readyz_deep.py  test_readyz_richness.py  test_scripts_arco_stac.py  (+6 more)
charts/mheat/: Chart.yaml  README.md  values.yaml
charts/mheat/grafana/: mheat-overview.json
charts/mheat/templates/: bootstrap-climatology-job.yaml  climatology-pvc.yaml  cronjob.yaml  deployment.yaml  grafana-dashboard.yaml  ingress.yaml  secret.yaml  service.yaml  servicemonitor.yaml
deploy/: README.md  screenshots_howto.md
deploy/screenshots/: 00_index.html
frontend/: .eslintignore  .eslintrc.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
frontend/public/: _redirects
frontend/src/: App.tsx  api.ts  i18n.tsx  plotly.d.ts  styles.css  types.ts
frontend/src/__tests__/: App.test.tsx  HeroStat.test.tsx  api.test.ts  i18n.test.tsx  locales.test.ts  url.test.ts
frontend/src/api/: generated.ts  openapi.json
frontend/src/components/: AboutPage.tsx  CoachMarks.tsx  EventChart.tsx  EventListA11y.tsx  EventPanel.tsx  KeyboardHelp.tsx  LayerControl.tsx  Legend.tsx  MapTimeSlider.tsx  MapView.tsx  MapViewGL.tsx  PlainMode.tsx  Timeline.tsx
frontend/src/components/__tests__/: EventPanel.test.tsx  LayerControl.test.tsx  Legend.test.tsx  MapTimeSlider.test.tsx  Timeline.test.tsx  eventsAsBubbles.test.ts
frontend/src/lib/: url.ts
frontend/src/locales/: en.json  fr.json  it.json
frontend/src/test/: setup.ts
scripts/: backfill.py  bench.py  bench_inproc.py  bootstrap_climatology.py  cron_daily_pull.sh  export_arco.py  freeze_openapi.py  register_stac.py  reproduce.py  run_all.py  smoke.py  update_daily.py  validate_climatology.py
scripts/prototypes/: README.md
scripts/prototypes/accumulation/: README.md  accumulation.py
scripts/prototypes/erosion/: README.md  erosion.py
scripts/prototypes/salinity/: README.md  salinity.py
scripts/prototypes/substrate/: README.md  substrate.py
sdk/: README.md  pyproject.toml
sdk/mheat_client/: __init__.py  client.py
sdk/tests/: test_client.py
tutorials/: README.md  _generate_translations.py  datalab_quickstart.ipynb  mhw_mediterranean.ipynb  mhw_mediterranean_fr.ipynb  mhw_mediterranean_it.ipynb
