[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mheat-client"
version = "0.1.0"
description = "Thin Python SDK for the MHEAT (Mediterranean marine-heatwave) HTTP API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MHEAT maintainers" },
]
keywords = ["mhw", "marine-heatwave", "copernicus", "edito", "mediterranean", "stac", "zarr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dependencies = [
    "httpx>=0.25",
    "pandas>=2.0",
    "xarray>=2024.1",
    "pyarrow>=14.0",
    "zarr>=2.16,<3",
    "fsspec>=2024.1",
    "aiohttp>=3.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
geo = ["shapely>=2.0", "geopandas>=0.14"]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "build>=1.0", "twine>=4.0"]

[project.urls]
Homepage = "https://github.com/your-org/mheat"
Documentation = "https://github.com/your-org/mheat/tree/main/sdk"
Source = "https://github.com/your-org/mheat"
Issues = "https://github.com/your-org/mheat/issues"

[tool.setuptools.packages.find]
include = ["mheat_client*"]
exclude = ["tests*"]
